--- a/index.html
+++ b/index.html
@@ -1,7 +1,88 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, maximum-scale=1.0">
+		<title>Scouting PASS</title>
+		<script src="resources/js/easy.qrcode.min.js"></script>
+		<script src="resources/js/TBAInterface.js"></script>
+		<script src="resources/js/scoutingPASS.js"></script>
+		<script src="2022/RR_config.js"></script>
+		<link rel="stylesheet" href="resources/css/scoutingPASS.css">
+	</head>
+
+	<body>
+		<form id="scoutingForm" onsubmit="return false">
+			<div id="main-panel-holder">
+				<div id="prematch" class="main-panel">
+					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">N</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
+					<h2>Pre-Match</h2>
+					<p class="match-label"><input type="button" value="Next" onclick="swipePage(1)"></p>
+					<table id="prematch_table">
+					<!-- ###PRE-MATCH-COMPONENTS###-->
+					</table>
+					<p class="match-label"><input type="button" value="Next" onclick="swipePage(1)"></p>
+				</div>
+
+				<div id="auton" class="main-panel" style="background-color: #831111;">
+					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">n</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
+					<h2>Auton</h2>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"> <input type="button" value="Next" onclick="swipePage(1)"></p>
+					<table id="auton_table">
+					<!-- ###AUTON-COMPONENTS###-->
+					</table>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"> <input type="button" value="Next" onclick="swipePage(1)"></p>
+				</div>
+
+				<div id="teleop" class="main-panel" style="background-color: #18460a;">
+					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">n</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
+					<h2>Teleop</h2>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"><input type="button" value="Next" onclick="swipePage(1)"></p>
+					<table id="teleop_table">
+						<!-- ###TELEOP-COMPONENTS###-->
+					</table>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"> <input type="button" value="Next" onclick="swipePage(1)"></p>
+				</div>
+
+				<div id="endgame" class="main-panel" style="background-color: #451e85;">
+					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">n</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
+					<h2>Endgame</h2>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"><input type="button" value="Next" onclick="swipePage(1)"></p>
+					<table id="endgame_table">
+						<!-- ###ENDGAME-COMPONENTS###-->
+					</table>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"> <input type="button" value="Next" onclick="swipePage(1)"></p>
+				</div>
+
+				<div id="post-match" class="main-panel" style="background-color: #8f1a1a;">
+					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">n</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
+					<h2>Miscellaneous</h2>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"><input type="button" value="Next" onclick="swipePage(1)"></p>
+					<table id="postmatch_table">
+						<!-- ###POST-MATCH-COMPONENTS###-->
+					</table>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"> <input type="button" value="Next" onclick="swipePage(1)"></p>
+				</div>
+
+				<div id="qr-code" class="main-panel">
+					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">n</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
+					<h2>Generate QR Code</h2>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"></p>
+					<p id="qr-info"><span id="display_qr-info" style="border: none; text-align: center;"></span></p>
+					<table id="qr-table"><tr><td width="5%">&nbsp;</td><td width="90%">
+						<div id="qrcode" style="text-align:center">
+							<script>
+						// Create QRCode Object
+								qr = new QRCode(document.getElementById("qrcode"), options)
+					</script>
+					</div>
+				</td><td width="5%">&nbsp;</td></tr></table>
+					<p></p>
+					<div id="clearButton">
+						<button type="button" onclick="clearForm()">Clear Form</button>
+					</div>
+					<br>
+				</div>
+			</div>
+		</body>
+	</form>
 </html>
