--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 					<p class="match-label"><input type="button" value="Next" onclick="swipePage(1)"></p>
 				</div>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
 				<div id="auton" class="main-panel" style="background-color: #831111;">
 					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">n</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
 					<h2>Auton</h2>
@@ -35,10 +33,36 @@
 					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"> <input type="button" value="Next" onclick="swipePage(1)"></p>
 				</div>
 
-=======
->>>>>>> parent of 0100e29 (Revert "aaa")
-=======
->>>>>>> parent of 0100e29 (Revert "aaa")
+				<div id="teleop" class="main-panel" style="background-color: #18460a;">
+					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">n</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
+					<h2>Teleop</h2>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"><input type="button" value="Next" onclick="swipePage(1)"></p>
+					<table id="teleop_table">
+						<!-- ###TELEOP-COMPONENTS###-->
+					</table>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"> <input type="button" value="Next" onclick="swipePage(1)"></p>
+				</div>
+
+				<div id="endgame" class="main-panel" style="background-color: #451e85;">
+					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">n</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
+					<h2>Endgame</h2>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"><input type="button" value="Next" onclick="swipePage(1)"></p>
+					<table id="endgame_table">
+						<!-- ###ENDGAME-COMPONENTS###-->
+					</table>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"> <input type="button" value="Next" onclick="swipePage(1)"></p>
+				</div>
+
+				<div id="post-match" class="main-panel" style="background-color: #8f1a1a;">
+					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">n</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
+					<h2>Miscellaneous</h2>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"><input type="button" value="Next" onclick="swipePage(1)"></p>
+					<table id="postmatch_table">
+						<!-- ###POST-MATCH-COMPONENTS###-->
+					</table>
+					<p class="match-label"><input type="button" value="Prev" onclick="swipePage(-1)"> <input type="button" value="Next" onclick="swipePage(1)"></p>
+				</div>
+
 				<div id="qr-code" class="main-panel">
 					<h1 class="page_title"><span class="odd">P</span><span class="even">W</span><span class="odd">n</span><span class="even">A</span><span class="odd">G</span><span class="even">E</span><br>Scouting 2020</h1>
 					<h2>Generate QR Code</h2>
